Fixed contrast issue

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -90,7 +90,7 @@ div.form{
     padding: 100px;
 }
 .error {
-    color: #ff0000;
+    color: #e32a2a;
     font-family: Monospace;
     text-align: center;
     padding: 100px;
